Fix text overflow on widgets

--- a/cp-styles/app/styles/components/_widget.scss
+++ b/cp-styles/app/styles/components/_widget.scss
@@ -17,7 +17,7 @@ $widget-padding-x: 20px;
     letter-spacing: 1px;
     font-size: 80%;
     margin-left: auto;
-    min-width: 70px;
+    min-width: 85px;
     text-align: right;
   }
 }
